[gd_scene load_steps=3 format=2]

[ext_resource path="res://back/Back.gd" type="Script" id=1]
[ext_resource path="res://items/panel.jpg" type="Texture" id=2]

[node name="Back" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
margin_right = 53.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
margin_left = 971.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Sprite" parent="."]
position = Vector2( 730.17, 268.829 )
scale = Vector2( 0.139733, 0.11729 )
texture = ExtResource( 2 )

[node name="Blue" type="Button" parent="Panel"]
margin_left = -229.663
margin_top = -656.4
margin_right = -0.662598
margin_bottom = -402.4
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="Button" parent="Panel"]
margin_left = -231.884
margin_top = -163.4
margin_right = 6.11621
margin_bottom = 100.6
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="Button" parent="Panel"]
margin_left = -200.221
margin_top = 316.943
margin_right = 7.77881
margin_bottom = 568.943
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Panel/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Panel/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Panel/Green" to="." method="_on_Green_pressed"]
